# GEGL_GIMP_PLUGIN_hslseven

./: README.md  hslseven.c  meson.build
